...
          href: null,
        }}
      />
      <Tabs.Screen
        name="groups"
        options={{
          title: 'GROUPS',
          tabBarIcon: ({ color }) => (
            <BrandedIcon name="groups" size={24} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
