...
                <Text style={[styles.modalBtnText, { color: colors.text }]}>CANCEL</Text>
              </TouchableOpacity>
              <TouchableOpacity
                style={[styles.modalBtn, { flex: 1, backgroundColor: colors.accent }]}
                onPress={saveEditPlayer}
              >
                <Text style={[styles.modalBtnText, { color: 'white' }]}>SAVE</Text>
              </TouchableOpacity>
            </View>
          </ScrollView>
        </View>
      </View>
    </Modal>
...
